docker agent中指定runAsUser和runAsGroup，值类型为string。

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1342,6 +1342,8 @@ additionalAgents:
         memory: '2Gi'
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
+    runAsUser: '0'
+    runAsGroup: '0'
     volumes:
       - type: EmptyDir
         mountPath: /var/lib/docker
