修改镜像地址

--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -60,11 +60,11 @@ spec:
         app: docker-credentials-distributor
     spec:
       serviceAccountName: secret-distributor-sa
-      imagePullSecrets:
-        - name: registry-idc-library
+      #imagePullSecrets:
+      #  - name: registry-idc-library
       containers:
         - name: distributor
-          image: harbor.idc.roywong.work/library/docker-credentials-distributor:latest
+          image: harbor.idc.roywong.work/public/docker-credentials-distributor:latest
           env:
             - name: POD_NAME  # 环境变量POD_NAME对应docker-credentials-distributor程序中的资源ID。
               valueFrom:
