--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1349,6 +1349,9 @@ additionalAgents:
         memory: false
       - type: EmptyDir
         mountPath: /var/run
+      - type: Secret
+        secretName: registry-idc-library
+        mountPath: /home/jenkins/.docker   # Jenkins jnlp 进程会在这里找 config.json
     envVars:
       - name: DOCKER_HOST
         value: "unix:///var/run/docker.sock"
