--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1349,9 +1349,9 @@ additionalAgents:
         memory: false
       - type: EmptyDir
         mountPath: /var/run
-      - type: Secret
+      - name: regcred
+        type: Secret
         secretName: registry-idc-library
-        mountPath: /home/jenkins/.docker   # Jenkins jnlp 进程会在这里找 config.json
     envVars:
       - name: DOCKER_HOST
         value: "unix:///var/run/docker.sock"
@@ -1376,6 +1376,9 @@ additionalAgents:
         volumeMounts:
           - mountPath: /var/lib/docker
           - mountPath: /var/run
+          - name: regcred
+            mountPath: /home/jenkins/.docker/config.json
+            subPath: .dockerconfigjson
 #  maven:
 #    podName: maven
 #    customJenkinsLabels: maven
