--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1084,11 +1084,11 @@ agent:
 
   # Pod-wide environment, these vars are visible to any container in the agent pod
   # -- Environment variables for the agent Pod
-#  envVars:
-#    - name: HTTP_PROXY
-#      value: http://10.255.2.162:8001
-#    - name: HTTPS_PROXY
-#      value: http://10.255.2.162:8001
+  envVars:
+    - name: HTTP_PROXY
+      value: http://10.255.2.162:8001
+    - name: HTTPS_PROXY
+      value: http://10.255.2.162:8001
   # - name: PATH
   #   value: /usr/local/bin
   # -- Mount a secret as environment variable
