--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -983,13 +983,11 @@ agent:
   # -- Resources allocation (Requests and Limits)
   resources:
     requests:
-      cpu: "512m"
-      memory: "512Mi"
-      # ephemeralStorage:
+      cpu: '100m'
+      memory: '128Mi'
     limits:
-      cpu: "4000m"
-      memory: "8192Mi"
-      # ephemeralStorage:
+      cpu: '4'
+      memory: '8Gi'
   livenessProbe: {}
   #  execArgs: "cat /tmp/healthy"
   #  failureThreshold: 3
@@ -1231,8 +1229,8 @@ additionalAgents:
       tag: jdk8
     resources:
       requests:
-        cpu: '500m'
-        memory: '1Gi'
+        cpu: '100m'
+        memory: '128Mi'
       limits:
         cpu: '4'
         memory: '8Gi'
@@ -1253,8 +1251,8 @@ additionalAgents:
       tag: jdk11
     resources:
       requests:
-        cpu: '500m'
-        memory: '1Gi'
+        cpu: '100m'
+        memory: '128Mi'
       limits:
         cpu: '4'
         memory: '8Gi'
@@ -1280,8 +1278,8 @@ additionalAgents:
       tag: jdk17
     resources:
       requests:
-        cpu: '500m'
-        memory: '1Gi'
+        cpu: '100m'
+        memory: '128Mi'
       limits:
         cpu: '4'
         memory: '8Gi'
@@ -1307,8 +1305,8 @@ additionalAgents:
       tag: jdk21
     resources:
       requests:
-        cpu: '500m'
-        memory: '1Gi'
+        cpu: '100m'
+        memory: '128Mi'
       limits:
         cpu: '4'
         memory: '8Gi'
