maven-jdk8配置/home/jenkins/.m2/repository持久化

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1243,6 +1243,10 @@ additionalAgents:
         configMapName: maven-settings
         mountPath: /home/jenkins/.m2/settings.xml
         subPath: settings.xml
+      - type: PVC
+        claimName: data-maven-repository
+        mountPath: /home/jenkins/.m2/repository
+        readOnly: false
   maven-jdk11:
     podName: maven-jdk11
     customJenkinsLabels: maven-jdk11
