kustomize：`kustomize edit fix`和`kustomize edit fix --vars`

--- a/kustomize/apps/app-1/kustomization.yaml
+++ b/kustomize/apps/app-1/kustomization.yaml
@@ -3,11 +3,9 @@ kind: Kustomization
 
 # 引用上一级的 base
 resources:
-  - ../../base
+- ../../base
 
 # 只对 Deployment 应用 patchesStrategicMerge
-patchesStrategicMerge:
-  - patch.yaml
 
 # 如果同时有 Service patch，就在这里列出：
 # patchesStrategicMerge:
@@ -15,6 +13,10 @@ patchesStrategicMerge:
 #   - service-patch.yaml
 
 # 可以针对 app-1 再加一些 label、annotation、configMapGenerator 等
-namePrefix: app1-      # 部署出来的资源名会变成 app1-nginx
-commonLabels:
-  app: app-1
+namePrefix: app1-
+labels:
+- includeSelectors: true
+  pairs:
+    app: app-1
+patches:
+- path: patch.yaml
