--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -2,9 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment.yaml
-  - service.yaml
+- deployment.yaml
+- service.yaml
 
 # 可以在此处定义 commonLabels/commonAnnotations 等全局设置
-commonLabels:
-  project: demo
+labels:
+- includeSelectors: true
+  pairs:
+    project: demo
