--- a/kustomize/apps/app-1/kustomization.yaml
+++ b/kustomize/apps/app-1/kustomization.yaml
@@ -3,20 +3,12 @@ kind: Kustomization
 
 # 引用上一级的 base
 resources:
-- ../../base
+  - ../../_bases/ingress
 
-# 只对 Deployment 应用 patchesStrategicMerge
-
-# 如果同时有 Service patch，就在这里列出：
-# patchesStrategicMerge:
-#   - patch.yaml
-#   - service-patch.yaml
-
-# 可以针对 app-1 再加一些 label、annotation、configMapGenerator 等
-namePrefix: app1-
-labels:
-- includeSelectors: true
-  pairs:
-    app: app-1
 patches:
-- path: patch.yaml
+  - target:
+      group: networking.k8s.io
+      version: v1
+      kind: Ingress
+      name: www
+    path: patch-ingress.yaml
