kustomize：ingress.yaml模板中修改hosts字段为host。

--- a/kustomize/_bases/ingress/ingress.yaml
+++ b/kustomize/_bases/ingress/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   ingressClassName: ingress-nginx-lan
   rules:
-    - hosts: www.idc-ingress-nginx-lan.roywong.work
+    - host: www.idc-ingress-nginx-lan.roywong.work
       http:
         paths:
           - backend:
