--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1310,8 +1310,8 @@ additionalAgents:
         privileged: true
         resources:
           requests:
-            cpu: '100m'
-            memory: '128Mi'
+            cpu: '2'
+            memory: '4Gi'
           limits:
             cpu: '4'
             memory: '8Gi'
