--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -159,6 +159,8 @@ controller:
       value: http://10.255.2.162:8001
     - name: HTTPS_PROXY
       value: http://10.255.2.162:8001
+    - name: NO_PROXY
+      value: 'localhost,127.0.0.1,10.251.0.0/16,10.252.0.0/16,*.svc,*.svc.cluster.local,kubernetes.default.svc'
   #   - name: http_proxy
   #     value: "http://192.168.64.1:3128"
 
