java helm chart：第三版

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ .Release.Name }}-configmap
 data:
   myvalue: "Hello World"
+  drink: "{{ .Values.favouriteDrink }}"
 
 
 # helm template clunky-serval ./java
+# helm template clunky-serval ./java  --set favouriteDrink=slurm
