java helm chart：v3.1

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -4,7 +4,8 @@ metadata:
   name: {{ .Release.Name }}-configmap
 data:
   myvalue: "Hello World"
-  drink: "{{ .Values.favouriteDrink }}"
+  drink: "{{ .Values.favourite.drink }}"
+  food: "{{ .Values.favourite.food }}"
 
 
 # helm template clunky-serval ./java
