java helm chart：v4.3

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   myvalue: "Hello World"
   drink: {{ .Values.favourite.drink | quote }}
-  food: {{ .Values.favourite.food | quote }}
+  food: {{ .Values.favourite.food | upper | quote }}
 
 
 # helm template clunky-serval ./java
