java helm chart：v5.1

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -4,8 +4,11 @@ metadata:
   name: {{ .Release.Name }}-configmap
 data:
   myvalue: "Hello World"
-  drink: {{ .Values.favourite.drink | default "tea" |  quote }}
-  food: {{ .Values.favourite.food | upper | quote }}
+  drink: "{{ .Values.favourite.drink | default "tea" }}"
+  food: "{{ .Values.favourite.food | upper }}"
+{{- if eq .Values.favourite.drink "coffee"}}
+  mug: "true"
+{{- end }}
 
 
 # helm template clunky-serval ./java
