java helm chart：v5.5

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -8,6 +8,7 @@ data:
   drink: "{{ .drink | default "tea" }}"
   food: "{{ .food | upper }}"
   {{- end }}
+  release: "{{ .Release.Name }}"
 
 
 # helm template clunky-serval ./java
