java helm chart：v5.6

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -7,8 +7,9 @@ data:
   {{- with .Values.favourite }}
   drink: "{{ .drink | default "tea" }}"
   food: "{{ .food | upper }}"
+  release: "{{ $.Release.Name }}"
   {{- end }}
-  release: "{{ .Release.Name }}"
+
 
 
 # helm template clunky-serval ./java
