java helm chart：v5.8

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -16,6 +16,10 @@ data:
     - {{ . | title | quote }}
     {{- end }}
 
+  size: |-
+    {{- range tuple "small" "medium" "large" }}
+    - {{ . | quote }}
+    {{- end }}
 
 
 
