java helm chart：v6.2

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -12,6 +12,11 @@ data:
   release: "{{ $relname }}"
   {{- end }}
 
+  toppings: |-
+    {{- range $index, $topping := .Values.pizzaToppings }}
+    {{ $index }}: {{ $topping }}
+    {{- end }}
+
 
 
 # helm template clunky-serval ./java
