--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -5,17 +5,10 @@ metadata:
 data:
   myvalue: "Hello World"
 
-  {{- $relname := .Release.Name -}}
-  {{- with .Values.favourite }}
-  drink: "{{ .drink | default "tea" }}"
-  food: "{{ .food | upper }}"
-  release: "{{ $relname }}"
+  {{- range $key, $val := .Values.favourite }}
+  {{ $key }}: {{ $val | quote }}
   {{- end }}
 
-  toppings: |-
-    {{- range $index, $topping := .Values.pizzaToppings }}
-    {{ $index }}: {{ $topping }}
-    {{- end }}
 
 
 
