java helm chart：v6.4

--- a/_charts/java/values.yaml
+++ b/_charts/java/values.yaml
@@ -8,3 +8,8 @@ pizzaToppings:
   - peppers
   - onions
   - pineapple
+
+tlsSecrets:
+  - name: tls-roywong-work
+    certificate: certificate
+    key: key
