--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -2,13 +2,15 @@
   labels:
     generator: helm
     date: {{ now | htmlDate }}
+    chart: {{ .Chart.Name }}
+    version: {{ .Chart.Version }}
 {{- end }}
 
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
-  {{- template "mychart.labels" }}
+  {{- template "mychart.labels" . }}
 data:
   myvalue: "Hello World"
   {{- range $key, $val := .Values.favourite }}
