--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -1,18 +1,17 @@
-{{- define "mychart.labels" }}
-  labels:
-    generator: helm
-    date: {{ now | htmlDate }}
-    chart: {{ .Chart.Name }}
-    version: {{ .Chart.Version }}
-{{- end }}
+{{- define "mychart.app" -}}
+app_name: {{ .Chart.Name }}
+app_version: "{{ .Chart.Version }}"
+{{- end -}}
 
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-configmap
-  {{- template "mychart.labels" . }}
+  labels:
+{{ include "mychart.app" . | indent 4 }}
 data:
   myvalue: "Hello World"
   {{- range $key, $val := .Values.favourite }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
+{{ include "mychart.app" . | indent 2 }}
