--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -1,16 +1,8 @@
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: conf
-data:
-{{ (.Files.Glob "foo/*").AsConfig | indent 2 }}
-
----
 apiVersion: v1
 kind: Secret
 metadata:
-  name: very-secret
+  name: {{ .Release.Name }}-secret
 type: Opaque
 data:
-{{ (.Files.Glob "bar/*").AsSecrets | indent 2 }}
+  token: |-
+    {{ .Files.Get "config1.toml" | b64enc }}
