java helm chart：mysubchart v1.2

--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -4,7 +4,4 @@ metadata:
   name: {{ .Release.Name }}-secret
 type: Opaque
 data:
-  token: |-
-    {{ .Files.Get "config1.toml" | b64enc }}
-  some-file.txt: {{ range .Files.Lines "foo/bar.txt" }}
-    {{ . }}{{end}}
+  salad: {{ .Values.global.salad }}
