--- a/_charts/java/charts/mysubchart/templates/configmap.yaml
+++ b/_charts/java/charts/mysubchart/templates/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-cfgmap2
+  labels:
+    {{ template "labels" .}}
 data:
   dessert: "{{ .Values.dessert }}"
   salad: "{{ .Values.global.salad }}"
