--- a/_charts/java/templates/configmap.yaml
+++ b/_charts/java/templates/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-secret
+  labels:
+    {{ template "labels" .}}
 type: Opaque
 data:
   salad: {{ .Values.global.salad }}
