controller节点中插件取消版本号

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -410,11 +410,11 @@ controller:
   # Plugins will be installed during Jenkins controller start
   # -- List of Jenkins plugins to install. If you don't want to install plugins, set it to `false`
   installPlugins:
-    - kubernetes:4324.vfec199a_33512
-    - workflow-aggregator:608.v67378e9d3db_1
-    - git:5.7.0
-    - configuration-as-code:1953.v148f87d74b_1e
-    - parameterized-trigger:859.vb_e3907a_07a_16
+    - kubernetes
+    - workflow-aggregator
+    - git
+    - configuration-as-code
+    - parameterized-trigger
 
   # If set to false, Jenkins will download the minimum required version of all dependencies.
   # -- Download the minimum required version or latest version of all dependencies
