controller节点添加插件：docker-commons

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -415,6 +415,7 @@ controller:
     - git
     - configuration-as-code
     - parameterized-trigger
+    - docker-commons
 
   # If set to false, Jenkins will download the minimum required version of all dependencies.
   # -- Download the minimum required version or latest version of all dependencies
