controller节点添加插件：docker-commons:457.v0f62a_94f11a_3

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -415,7 +415,7 @@ controller:
     - git
     - configuration-as-code
     - parameterized-trigger
-    - docker-commons
+    - docker-commons:457.v0f62a_94f11a_3
 
   # If set to false, Jenkins will download the minimum required version of all dependencies.
   # -- Download the minimum required version or latest version of all dependencies
