调整dind配置，使用tcp连接，取消runAsUser和runAsGroup配置

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1301,8 +1301,8 @@ additionalAgents:
       limits:
         cpu: '4'
         memory: '8Gi'
-    runAsUser: '0'
-    runAsGroup: '0'
+    # runAsUser: '0'
+    # runAsGroup: '0'
     volumes:
       - type: EmptyDir
         mountPath: /var/lib/docker
