--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1296,11 +1296,11 @@ additionalAgents:
       tag: 28.1.1
     resources:
       requests:
-        cpu: '4'
-        memory: '8Gi'
+        cpu: '0.1'
+        memory: '256Mi'
       limits:
-        cpu: '4'
-        memory: '8Gi'
+        cpu: '1'
+        memory: '1Gi'
     runAsUser: '0'
     runAsGroup: '0'
     volumes:
@@ -1326,11 +1326,11 @@ additionalAgents:
         privileged: true
         resources:
           requests:
-            cpu: '4'
-            memory: '8Gi'
+            cpu: '0.2'
+            memory: '1Gi'
           limits:
-            cpu: '4'
-            memory: '8Gi'
+            cpu: '1'
+            memory: '4Gi'
         volumeMounts:
           - mountPath: /var/lib/docker
           - mountPath: /var/run
