--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1296,11 +1296,11 @@ additionalAgents:
       tag: 28.1.1
     resources:
       requests:
-        cpu: '0.1'
-        memory: '256Mi'
+        cpu: 100m
+        memory: 128Mi
       limits:
-        cpu: '1'
-        memory: '1Gi'
+        cpu: 200m
+        memory: 256Mi
     runAsUser: '0'
     runAsGroup: '0'
     volumes:
@@ -1326,8 +1326,8 @@ additionalAgents:
         privileged: true
         resources:
           requests:
-            cpu: '0.2'
-            memory: '1Gi'
+            cpu: 200m
+            memory: 512Mi
           limits:
             cpu: '1'
             memory: '4Gi'
